# WATG

./: LICENSE  README.md
executables/: README-WATG.md  README.md
source-code/: README.md
source-code/src/: index.html
source-code/src-tauri/: Cargo.toml  README.md  tauri.conf.json
source-code/src-tauri/src/: main.rs
source-code/src-tauri/src/scripts/: wa.js
src/: index.html
src-tauri/: Cargo.toml  README.md  Tauri.toml  build.rs  tauri.conf.json  𝐃𝐎𝐔𝐁𝐋𝐄-𝐂𝐋𝐈𝐂𝐊-𝐓𝐎-𝐁𝐔𝐈𝐋𝐃.bat
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  window-state.json
src-tauri/src/: for_windows.rs  lib.rs  main.rs
src-tauri/src/scripts/: tg.js  wa-possible-replacement-untested.js  wa.css  wa.js
