[package]
name = "watg"
version = "0.6.1"
description = "Whatsapp + Telegram"
authors = ["DavidBevi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "watg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows-sys]
version = "0.60"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]


[features]
unstable = ["tauri/unstable"]

[profile.release]
opt-level = "z"
strip = true
lto = true
