#,-------------------------------------------------------------------------------------,
#| Cargo.toml - defines crates, dependencies, plugins, features                        |
#| - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - |
#| Keys & definitions: https://doc.rust-lang.org/cargo/reference/manifest.html         |
#| about `_lib` suffix: https://github.com/rust-lang/cargo/issues/8519                 |
#'-------------------------------------------------------------------------------------'

[package]
name = "watg"
version = "0.7.1"
description = "Whatsapp + Telegram"
authors = ["DavidBevi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["config-toml", "unstable", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.0"
tauri-winrt-notification = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
widestring = "1.0"
windows = { version = "0.61.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_Com_StructuredStorage"] }
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winrt-notification = "0.5"
mslnk = "0.1.8"

[features]
unstable = ["tauri/unstable"]

[profile.release]
opt-level = "z"
strip = true
lto = true
